nom + prenom + figma url

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hakuna Matata - Choice of language</title>
+    <title>Hakuna =<</P> - Choice of language</title>
 </head>
 <body>
     <h1>Choice of language</h1>
