ajout bannière et menu dans le header

--- a/fr/index.html
+++ b/fr/index.html
@@ -2,10 +2,33 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hakuna Matata">
+
     <title>Hakuna Matata - Page d'Accueil</title>
+
+    <link rel="stylesheet" href="css/style.css">
+
+    <script defer="" src="https://unpkg.com/alpinejs@3.4.2/dist/cdn.min.js"></script>
+
 </head>
-<body>
-    
+    <body>
+            <header>
+
+                <div class="header__banniere"><img src="/public/icones/banniere-header.svg" alt="Bannière du header"></div>
+
+                <nav class="header__menu menu">
+                    <ul class="menu__list list-unstyled">
+                        <li class="menu__item"><a class="menu__link" href="/fr/index.html">Accueil</a></li>
+                        <li class="menu__item"><a class="menu__link" href="/fr/replique.html">Réplique</a></li>
+                        <li class="menu__item"><a class="menu__link" href="/fr/film.html">Le Roi Lion</a></li>
+                        <li class="menu__item"><a class="menu__link" href="/fr/realisateur.html">Jon Favreau</a></li>
+                        <li class="menu__item"><a class="menu__link" href="/fr/livre.html">Philosophes et heureux</a></li>
+                        <li class="menu__item"><a class="menu__link" href="/fr/musique.html">Hakuna Matata</a></li>
+                    </ul>
+                </nav>
+
+            </header>
 </body>
 </html>
