--- a/fr/index.html
+++ b/fr/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hakuna Matata">
 
-    <title>Hakuna Matata - Page d'Accueil</title>
+    <title>Hakuna Matata - Page d'accueil</title>
 
     <link rel="stylesheet" href="css/style.css">
 
