--- a/fr/index.html
+++ b/fr/index.html
@@ -80,10 +80,29 @@
                             <p class="card__description">"Hakuna Matata", la mélodie culte de "Le Roi Lion", incarne une philosophie de vie prônant l'insouciance et la légèreté. Découvrez comment cette chanson transcende les générations en nous rappelant l'importance de la joie et de l'instant présent.</p>
                         </div>
                 </article>
-    
+
             </section>
     
         </main>
+
+        <footer class="footer">
+
+            <nav class="footer__menu">
+                <ul class="list-unstyled">
+                    <li><a href="/fr/contact.html">Contact</a></li>
+                    <li><a href="/fr/a-propos.html">À propos</a></li>
+                    <li><a href="/fr/glossaire.html">Glossaire</a></li>
+                    <li><a href="/fr/autres-projets.html">Autres projets</a></li>
+                </ul>
+            </nav>
+
+            <img src="/public/icones/logo-mmi.svg" alt="Logo MMi" class="footer__logo">
+
+            <div class="footer__contact">
+                <p class="footer__contact">Pour me contacter : <b><a href="mailto:tasnim.kebaili@edu.univ-fcomte.fr" class="footer__link">tasnim.kebaili@edu.univ-fcomte.fr</a></b></p>
+                <p class="footer__contact">Projet réalisé dans le cadre d’un exercice pédagogique au <b><a href="https://mmimontbeliard.com/" class="footer__link">département MMi de Montbéliard</a></b>.</p>
+            </div>
+        </footer>
 
 </body>
 </html>
