--- a/fr/index.html
+++ b/fr/index.html
@@ -29,6 +29,8 @@
                     <li class="menu__item"><a class="menu__link" href="/fr/musique.html">Hakuna Matata</a></li>
                 </ul>
             </nav>
+
+            <h1 class="header__title">Hakuna Matata</h1>
                 
         </header>
 
