ajout footer + header page réalisateur

--- a/fr/replique.html
+++ b/fr/replique.html
@@ -35,7 +35,7 @@
             
     </header>
 
-    <main>
+<main>
         <header class="top">
             <h2 class="top__title">Quand le monde entier te persécute, tu te dois de persécuter le monde : Le pouvoir de la réplique emblématique de "Le Roi Lion"</h2>
             <p class="top__introduction">Dans l'univers cinématographique, certaines répliques transcendent le temps et deviennent des icônes. "Quand le monde entier te persécute, tu te dois de persécuter le monde" est l'une de ces citations mémorables. Cette phrase est extraite du film d'animation bien-aimé de Disney, "Le Roi Lion". Elle est prononcée par le personnage de Timon, un suricate farfelu qui joue un rôle essentiel dans l'histoire de Simba, le jeune lion destiné à devenir roi. Cette citation incarne une philosophie de vie qui, bien que dérivée d'une comédie musicale pour enfants, porte un message profond et universel.</p>
@@ -87,7 +87,7 @@
             <a href="/fr/film.html" class="article__button">Lire l'article suivant</a>
         </section>
 
-    </main>
+</main>
 
     <footer class="footer">
 
@@ -109,3 +109,4 @@
     </footer>
 
 </body>
+</html>
