ajout contenu article page réalisateur

--- a/fr/realisateur.html
+++ b/fr/realisateur.html
@@ -35,10 +35,58 @@
 
     </header>
 
+<main>
 
+    <header class="top">
+        <div class="top__img"><img src="/public/img/REA1.webp" alt="Jon Favreau"></div>
+    </header>
 
+    <section class="article">
 
+        <div>
+            <h3 class="article__title">Jon Favreau : Le visionnaire derrière la réinvention de “Le Roi Lion”</h3>
+            <p class="article__text">En 2019, Disney nous a offert une nouvelle adaptation de son classique animé bien-aimé, “Le Roi Lion”. Cette version en prises de vues réelles, réalisée par Jon Favreau, a su captiver le public avec sa beauté visuelle et son respect fidèle envers l'original de 1994. Revisitons ce chef-d'œuvre d'animation réinventé.</p>
+        </div>
 
+        <div>
+            <figure class="article__figure">
+                <img src="/public/img/REA2.webp" alt="Jon Favreau Iron Man" class="article__image">
+                <figcaption class="article__description">Photo Jon Favreau - Iron Man</figcaption>
+            </figure>
+            <h3 class="article__title">Un homme aux multiples talents</h3>
+            <p class="article__text">Jon Favreau est bien plus qu'un réalisateur. Né le 19 octobre 1966 à Queens, New York, il est également acteur, producteur, scénariste et chef cuisinier. Sa polyvalence artistique se reflète dans sa capacité à aborder divers projets cinématographiques avec brio.</p>
+            <h3 class="article__title">Un début modeste</h3>
+            <p class="article__text">Favreau a débuté sa carrière dans le cinéma en tant qu'acteur, apparaissant dans des films tels que "Swingers" (1996) et "Made" (2001). Cependant, il s'est rapidement fait un nom en tant que réalisateur grâce à son premier long métrage, "Iron Man" (2008), qui a lancé le Marvel Cinematic Universe. Le film a été un énorme succès au box-office et a établi Favreau en tant que réalisateur majeur à Hollywood.</p>
+        </div>
+
+        <div>
+            <figure class="article__figure">
+                <img src="/public/img/REA3.webp" alt="Jon Favreau & Donald Glover" class="article__image">
+                <figcaption class="article__description">Photo de l'interview de Jon Favreau et Donald Glover </figcaption>
+            </figure>
+            <h3 class="article__title">Le réalisateur qui a tout changé</h3>
+            <p class="article__text">"Le Roi Lion" (2019) a été l'un des projets les plus ambitieux de Jon Favreau. Il a réussi à repousser les limites de la technologie cinématographique en utilisant des techniques de réalité virtuelle et de capture de mouvement pour donner vie à la savane africaine et à ses habitants. Le résultat est une immersion visuelle et sensorielle époustouflante, qui a été saluée par les critiques et le public.</p>
+            <h3 class="article__title">La magie du Roi Lion</h3>
+            <p class="article__text">Favreau a su capturer l'essence du film d'animation original tout en y apportant une touche de modernité. Sa capacité à diriger les acteurs vocaux, à créer un monde visuel réaliste et à transmettre une histoire intemporelle en dit long sur son talent en tant que réalisateur. "Le Roi Lion" (2019) est devenu l'un des plus grands succès de Disney et a contribué à la renaissance des adaptations en prises de vues réelles des classiques d'animation.</p>
+        </div>
+
+        <div>
+            <figure class="article__figure">
+                <img src="/public/img/REA4.webp" alt="Jon Favreau tournage" class="article__image">
+                <figcaption class="article__description">Jon Favreau en tournage </figcaption>
+            </figure>
+            <h3 class="article__title">L’héritage cinématographique de Jon Favreau</h3>
+            <p class="article__text">Outre "Iron Man" et "Le Roi Lion", Jon Favreau a dirigé d'autres films à succès, notamment "Chef" (2014) et "Le Livre de la Jungle" (2016), qui a également mélangé habilement l'animation avec la réalité. Il est devenu un réalisateur de renom, apprécié pour sa créativité et son talent visionnaire.</p>
+            <h3 class="article__title">Vers l'avenir</h3>
+            <p class="article__text">Jon Favreau a prouvé qu'il était un maître de l'adaptation cinématographique. Sa capacité à réinventer des histoires classiques tout en les rendant accessibles à de nouvelles générations est véritablement impressionnante. Les cinéphiles du monde entier attendent avec impatience ses futurs projets et les façons dont il continuera à repousser les limites de la réalisation cinématographique.</p>
+            <p class="article__text">En conclusion, Jon Favreau est bien plus qu'un réalisateur de talent. C'est un artiste polyvalent qui a su laisser sa marque sur l'industrie du cinéma avec des films mémorables. Sa réinvention de "Le Roi Lion" est un témoignage de son génie créatif et de sa passion pour le cinéma.</p>
+        </div>
+
+        <a href="/fr/film.html" class="article__button">Lire l'article suivant</a>
+
+    </section>
+
+</main>
 
     <footer class="footer">
     
