ajout contenu frise page livre

--- a/fr/realisateur.html
+++ b/fr/realisateur.html
@@ -82,7 +82,7 @@
             <p class="article__text">En conclusion, Jon Favreau est bien plus qu'un réalisateur de talent. C'est un artiste polyvalent qui a su laisser sa marque sur l'industrie du cinéma avec des films mémorables. Sa réinvention de "Le Roi Lion" est un témoignage de son génie créatif et de sa passion pour le cinéma.</p>
         </div>
 
-        <a href="/fr/film.html" class="article__button">Lire l'article suivant</a>
+        <a href="/fr/livre.html" class="article__button">Lire l'article suivant</a>
 
     </section>
 
