ajout contenu article page musique

--- a/fr/musique.html
+++ b/fr/musique.html
@@ -35,6 +35,91 @@
 
     </header>
 
+<main>
+
+    <header class="top">
+        <div class="top__img"><img src="/public/img/MUSIC1.webp" alt="Couverture livre"></div>
+    </header>
+
+    <section class="article">
+
+        <div>
+            <h3 class="article__title">L’hymne de la joie et de l’insouciance</h3>
+            <p class="article__text">La musique a le pouvoir de toucher nos âmes et de nous transporter vers des mondes
+                lointains. L'une de ces mélodies emblématiques est "Hakuna Matata", issue du film "Le Roi Lion" de
+                Disney. Cette chanson est bien plus qu'une simple mélodie entraînante ; elle incarne une philosophie de
+                vie, un appel à l'insouciance et à la joie. Dans cet article, nous plongeons dans les profondeurs de
+                "Hakuna Matata" et de son impact durable.</p>
+        </div>
+
+        <div>
+            <h3 class="article__title">Une mélodie envoutante</h3>
+            <p class="article__text">La chanson "Hakuna Matata" est une composition magistrale, créée par Elton John et
+                Tim Rice. Elle est interprétée par les personnages Timon et Pumbaa, deux amis farfelus que Simba
+                rencontre lorsqu'il s'enfuit de la Terre des Lions. La musique, accompagnée de paroles entraînantes,
+                transporte les auditeurs dans un état d'esprit insouciant et positif.</p>
+        </div>
+
+        <div>
+            <figure class="article__figure">
+                <img src="/public/img/MUSIC2.webp" alt="Timon, Pumba et Simba extrait film" class="article__image">
+                <figcaption class="article__description">Image tirée du film : Simba , Timon et Pumba</figcaption>
+            </figure>
+        </div>
+
+        <div>
+            <h3 class="article__title">Pas de problème</h3>
+            <p class="article__text">L'expression "Hakuna Matata" est originaire de la langue swahilie et se traduit
+                littéralement par "pas de problème" ou "pas de soucis". Par extension, elle incarne une philosophie de
+                vie qui invite à ne pas laisser les préoccupations et les soucis de la vie nous accabler. C'est une
+                invitation à vivre le moment présent, à embrasser la légèreté et à faire confiance au destin.</p>
+        </div>
+
+        <div>
+            <h3 class="article__title">Le refuge de Simba</h3>
+            <p class="article__text">Dans le film, "Hakuna Matata" devient un mantra pour Simba, le jeune lion en exil.
+                Il adopte cette philosophie après avoir fui la Terre des Lions, où il se sent coupable de la mort de son
+                père, Mufasa. Grâce à Timon et Pumbaa, Simba trouve un refuge dans cette nouvelle manière de vivre. La
+                chanson devient un point culminant du film, exprimant la transformation de Simba en un adulte
+                insouciant.</p>
+        </div>
+
+        <div>
+            <figure class="article__figure">
+                <img src="/public/img/MUSIC3.webp" alt="Simba extrait film" class="article__image">
+                <figcaption class="article__description">Image tirée du film : La naissance de Simba </figcaption>
+            </figure>
+        </div>
+
+        <div>
+            <h3 class="article__title">Un appel à la joie de vivre</h3>
+            <p class="article__text">"Hakuna Matata" est bien plus qu'une simple chanson. C'est un appel à la joie de
+                vivre, à la légèreté et à l'acceptation de ce que la vie nous réserve. Les paroles nous rappellent que
+                les préoccupations sont futiles et que le bonheur peut être trouvé dans les petites choses de la vie.
+                C'est une philosophie qui résonne avec des spectateurs de tous âges.</p>
+        </div>
+
+        <div>
+            <h3 class="article__title">Un héritage durable</h3>
+            <p class="article__text">Depuis sa création, "Hakuna Matata" est devenue une chanson emblématique de la
+                culture populaire. Elle a été reprise et adaptée dans de nombreuses langues et a marqué plusieurs
+                générations. Sa simplicité et son message universel en font une mélodie intemporelle.</p>
+        </div>
+
+        <div>
+            <h3 class="article__title">La musique de "Hakuna Matata"</h3>
+            <p class="article__text">La musique de "Hakuna Matata" est vivante et rythmée, caractéristique de la joie et
+                de la légèreté qu'elle évoque. Elle est accompagnée d'une animation joyeuse dans le film, montrant
+                Timon, Pumbaa et Simba dansant et chantant dans la jungle. La musique est un élément essentiel de la
+                narration, renforçant le message de la chanson.</p>
+            <p class="article__text">En fin de compte, "Hakuna Matata" est bien plus qu'une chanson de Disney. C'est un
+                hymne à la joie, à la simplicité et à l'acceptation de la vie telle qu'elle vient. Elle nous rappelle
+                que, parfois, il est bon de laisser nos soucis derrière nous et de vivre l'instant présent. "Hakuna
+                Matata", une mélodie qui continue de résonner dans nos cœurs et de nous rappeler l'importance de la
+                légèreté dans nos vies.</p>
+        </div>
+
+    </section>
 
   
 
