--- a/fr/musique.html
+++ b/fr/musique.html
@@ -121,6 +121,31 @@
 
     </section>
 
+
+    <section class="liens__musique">
+
+        <div>
+            <a href="https://www.youtube.com/watch?v=v34w65U98gI&pp=ygUTaGFrdW5hIG1hdGF0YSBmaWxtIA%3D%3D">
+            <img src="../public/icones/youtube fr.svg" alt="ecoutez sur youtube"></a>
+        </div>
+
+        <div>
+            <a href="https://deezer.page.link/EBU7Rn9QcvhUKSCs7">
+            <img src="../public/icones/deezer fr.svg" alt="ecoutez sur deezer"></a>
+        </div>
+
+        <div>
+            <a href="https://music.apple.com/fr/album/hakuna-matata/712975892?i=712976290">
+            <img src="../public/icones/apple music fr.svg" alt="ecoutez sur apple music"></a>
+        </div>
+
+        <div>
+            <a href="https://open.spotify.com/track/3xAfJdO9px9oh1HL7WTh0h?si=5c1e4a74aa474388">
+            <img src="../public/icones/spotify fr.svg" alt="ecoutez sur spotify"></a>
+        </div>
+
+    </section>
+
   
 
 
