--- a/fr/autres-projets.html
+++ b/fr/autres-projets.html
@@ -37,10 +37,28 @@
 
     <main>
 
+        <div>
+            <h3 class="top__title">Voici une compilation de projets qui partagent la même thématique centrée sur la culture cinématographique. Ces projets sont réalisés par mes camarades de classe.</h3>
+        </div>
+
+        <div>
+            <p class="projets__text">”Abyssal Wave” de Samuel Charasse</p>
+            <p class="projets__text">“The long line” de Bosetti Angelo</p>
+            <p class="projets__text">“Ton avenir est entre tes mains” de Liloue Guyot</p>
+            <p class="projets__text">“Mordor’s Direction” de Jérémy Roy</p>
+            <p class="projets__text">“Across the spider-web” de Damage Rayane</p>
+            <p class="projets__text">“My name is Bond, James Bond” de Liegeon Mathis</p>
+            <p class="projets__text">"Unclouded by hate" de Imrane Qerchi</p>
+            <p class="projets__text">“Kill this rabbit” de Pautrat Marion</p>
+            <p class="projets__text">“OppenMind” de Yilmaz Kalan</p>
+            <p class="projets__text">“Oppenheimer” de Moretti Tony</p>
+            <p class="projets__text">“Le Pianiste” de Gachod Pierre</p>
+        </div>
+
     </main>
 
 
-    
+
     <footer class="footer">
     
         <nav class="footer__menu">
