--- a/fr/glossaire.html
+++ b/fr/glossaire.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" x-data="{menuIsOpen:false}" :class="menuIsOpen && 'noscroll'">
 
 <head>
     <meta charset="UTF-8">
@@ -7,20 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hakuna Matata">
 
-    <title>Hakuna Matata - Page d'accueil</title>
+    <title>Hakuna Matata - Glossaire</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/src/css/style.css">
 
-    <script defer="" src="https://unpkg.com/alpinejs@3.4.2/dist/cdn.min.js"></script>
+    <script defer src="https://unpkg.com/alpinejs"></script>
 
 </head>
 
-<body>
-        <header>
+<body x-data="{ atTop: true }">
 
-            <div class="header__banniere"><img src="/public/icones/banniere-header.svg" alt="Bannière du header"></div>
+    <header>
 
-            <nav class="header__menu menu">
+        <div class="header__banniere">
+            <img class="img-banniere" src="/public/icones/banniere-header.svg" alt="Bannière du header">
+            <div class="header__buttons">
+                <a href="/en/glossary.html" class="lang__button">EN</a>
+                <button class="menu-btn" aria-label="menu" aria-expanded="false" aria-controls="mainNav"
+                @pointerdown="menuIsOpen = !menuIsOpen" :class="menuIsOpen && 'menu-btn--open'">
+                <span class="menu-btn__bar"></span>
+                </button>
+            </div>
+            <h1 class="header__title">Hakuna<br>Matata</h1>
+        </div>
+
+            <nav class="header__menu menu" id="mainNav" :class="menuIsOpen && 'menu--open'">
                 <ul class="menu__list list-unstyled">
                     <li class="menu__item"><a class="menu__link" href="/fr/index.html">Accueil</a></li>
                     <li class="menu__item"><a class="menu__link" href="/fr/replique.html">Réplique</a></li>
@@ -31,17 +42,15 @@
                 </ul>
             </nav>
 
-            <h1 class="header__title">Hakuna Matata</h1>
-
     </header>
 
     <main>
     
-        <header class="top">
-            <div class="top__img"><img src="/public/img/GLOSSARY.webp" alt="Photo glossaire"></div>
+        <header class="top2">
+            <div class="top2__img"><img src="/public/img/GLOSSARY.webp" alt="Photo glossaire"></div>
         </header>
     
-        <h2 class="top__title">Glossaire</h2>
+        <h2 class="top__titlee">Glossaire</h2>
 
         <div>
             <h3 class="article__title">Hakuna Matata</h3>
